# macromol_voxelize

./: README.rst  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: api_reference.rst  conf.py  met.pse
docs/_inv/: polars.inv
macromol_voxelize/: __init__.py  _voxelize.cc  voxelize.py
src/: __init__.py  _voxelize.cc  pymol.py  voxelize.py
tests/: test_pymol.nt  test_pymol.py  test_voxelize.nt  test_voxelize.py
tests/pymol_inputs/: met.npy
