[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "macromol_voxelize"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = 'README.rst'
dynamic = ["version", "description"]
requires-python = "~=3.8"
classifiers = [
  'Programming Language :: Python :: 3',
]
dependencies = [
]

[project.optional-dependencies]
test = [
  'pytest',
  'parametrize_from_file',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[project.urls]
'Documentation' = 'https://macromol-voxelize.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/macromol_voxelize'
'Bug Tracker' = 'https://github.com/kalekundert/macromol_voxelize/issues'
'Continuous Integration' = 'https://github.com/kalekundert/macromol_voxelize/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/macromol_voxelize'

[tool.ruff]
select = ["F"]
ignore = ["F405", "F403"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.coverage.run]
branch = true
parallel = true
source = ['macromol_voxelize']

[tool.coverage.report]
exclude_lines = [
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
]

[tool.semantic_release]
branch = 'release'
version_variable = 'macromol_voxelize/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
major_on_zero = false
